I agree with you, it should be [[yáshtiʼ]], but the page is currently at [[yáłtiʼ]] <speak#16226113>

--- a/en/s/speak.7214.wikitext
+++ b/en/s/speak.7214.wikitext
@@ -126,7 +126,7 @@ From {{etyl|enm}} {{term|speken||to speak|lang=enm}}, from {{etyl|ang}} {{term|s
 * [[Marathi]]: {{t|mr|बोलणे|sc=Deva}}
 * Mongolian: {{t|mn|ярих|tr=jarih|sc=Cyrl}}
 * [[Nahuatl]]: [[tlatoa]]
-* Navajo: {{tø|nv|yáshtiʼ}}
+* Navajo: {{tø|nv|yáłtiʼ}}
 * [[Ngarrindjeri]]: {{tø|nay|kungun}}
 * Norwegian: {{t+|no|snakke}}
 * [[Occitan]]: [[parlar]]
