--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -106,6 +106,7 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * [[Limburgish]]: {{t-|li|sjoen|xs=Limburgish}}
 * [[Lojban]]: {{t-|jbo|melbi|xs=Lojban}}
 * [[Macedonian]]: {{t|mk|убав|m|tr=úbav}}, {{t|mk|убава|f|tr=úbava}}, {{t|mk|убаво|n|tr=úbavo}}, {{t-|mk|прекрасен|m|tr=prékrasen}}, {{t|mk|прекрасна|f|tr=prékrasna}}, {{t|mk|прекрасно|n|tr=prékrasno}}
+* Malay: {{t|ms|cantik}}, {{t|ms|indah}}, {{t|ms|molek}}
 * Navajo: {{tø|nv|nizhóní}}
 * [[Novial]]: [[beli]]
 * [[Old Church Slavonic]]: {{tø|cu|красьнъ|tr=krasĭnŭ|sc=Cyrs}}
