/* Etymology */Etymology: add term template; +commas before from using [[Project:AWB|AWB]] <beautiful#16250678>

--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-(1520) From {{term|beauty}} + {{etyl|gem}} {{term|-ful||full of}}. Displaced earlier {{etyl|en|-}} ''[[sheen]]'' "beautiful" (from {{etyl|enm|-}} ''[[schene#Middle English|schene]]'' "beautiful", from {{etyl|ang|-}} ''[[sciene#Old English|scīene]]'' "beautiful"), {{etyl|enm|-}} ''[[wliti#Middle English|wliti]]'' "beautiful", from {{etyl|ang|-}} ''[[wlitig#Old English|wlitiġ]]'' "beautiful".
+(1520) From {{term|beauty}} + {{etyl|gem}} {{term|-ful||full of}}. Displaced earlier {{etyl|en|-}} ''[[sheen]]'' "beautiful" (from {{etyl|enm|-}} {{term|schene||beautiful|lang=enm}}, from {{etyl|ang|-}} {{term|sciene|scīene|beautiful|lang=ang}}), {{etyl|enm|-}} {{term|wliti||beautiful|lang=enm}}, from {{etyl|ang|-}} {{term|wlitig|wlitiġ|beautiful|lang=ang}}.
 
 ===Pronunciation===
 * {{enPR|byo͞oʹtĭ-fəl}}, {{IPA|/ˈbjuːtɪfəl/}}, {{SAMPA|/"bju:tIf@l/}}
