--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -137,6 +137,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 {{trans-top|intransitive: to search by touching}}
 * Arabic: {{t|ar|تحسس}}
 {{trans-mid}}
+* Norwegian: {{t|no|kjenne|alt=kjenne etter}}
 {{trans-bottom}}
 
 {{trans-top|intransitive: to experience an emotion or other mental state}}
