--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -122,6 +122,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Maltese: {{t-|mt|pont|m|xs=Maltese}}
 * Maori: {{t|mi|piriti}}, {{t|mi|arawhata}}
 * Mongolian: [[гүүр тавих]] (güür tavih)
+* Navajo: {{tø|nv|naʼníʼá}}
 * Nepali: {{t-|ne|पुल|sc=Deva|xs=Nepali}}
 * Norwegian: {{t+|no|bro|m|f}}, {{t+|no|bru|m|f}}
 * [[Occitan]]: [[pònt]]
