t+pt:[[cágado]] ([[WT:EDIT|Assisted]]) <tortoise#16281646>

--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -49,7 +49,7 @@
 *[[malayalam]]:[[ആമ]] aama
 * Persian: {{t+|fa|لاک‌پشت|f|xs=Persian}}
 * Polish: [[żółw lądowy]] {{m}}
-* Portuguese: {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}
+* Portuguese: {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t|pt|cágado}}
 * Romanian: [[țestoasă]] {{f}}, [[broască țestoasă]] {{f}}
 * Russian: {{t+|ru|черепаха|f|tr=čerepáxa}}
 * [[Scottish Gaelic]]: {{t-|gd|crùban-coille|m|xs=Scottish Gaelic}}, {{t-|gd|sligeanach|m|xs=Scottish Gaelic}}
