--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -2,7 +2,7 @@
 ==English==
 
 ===Etymology===
-Recorded since 1416, from {{etyl|fro}} [[briche]], probably from a Germanic source akin to Middle Dutch [[bricke]] "a tile", literally "a broken piece", from the verbal root of break
+Recorded since 1416, from {{etyl|fro}} {{term|briche|lang=fro}}, probably from a {{etyl|gem}} source. Akin to {{etyl|dum|-}} {{term|bricke|a tile|lang=dum}}, literally "a broken piece". Cognate with the verb {{term|break|lang=en}}.
 
 ===Pronunciation===
 * {{enPR|brĭk}}, {{IPA|/brɪk/}}, {{SAMPA|/brIk/}}
