--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -51,6 +51,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, which
 * [[Catalan]]: {{t-|ca|Israel|m}}
 * Chinese:
 *: Mandarin: {{t-|cmn|以色列|tr=Yǐsèliè|sc=Hani}}
+* Croatian: {{t|hr|Izrael|m}}
 * Czech: {{t+|cs|Izrael}}
 * Danish: {{t+|da|Israel}}
 * Dutch: {{t+|nl|Israël|n}}
