--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -605,9 +605,18 @@ From {{proto|North Sarawak|likud|lang=kyi}}, from {{proto|Malayo-Polynesian|liku
 ===Noun===
 {{head|kyi|noun}}
 
-# [[back]] (of the body)
+# [[back]] {{gloss|of the body}}
 
 [[Category:kyi:Anatomy]]
+
+----
+
+==Lojban==
+
+===Rafsi===
+{{jbo-rafsi}}
+
+# {{rafsi of|cutne}}
 
 [[ar:cut]]
 [[cs:cut]]
