t+es:[[incapacitar]] ([[WT:EDIT|Assisted]]) <hamstring#16291893>

--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -29,6 +29,7 @@
 {{trans-top|To lame or disable by cutting the tendons of the ham or knee; to hough; hence, to cripple; to incapacitate; to disable}}
 * Finnish: [[lamaannuttaa]], [[rampauttaa]]
 {{trans-mid}}
+* Spanish: {{t|es|incapacitar}}
 {{trans-bottom}}
 
 ----
