--- a/en/h/hamstring.7218.wikitext
+++ b/en/h/hamstring.7218.wikitext
@@ -23,7 +23,7 @@
 {{en-verb|hamstrings|hamstringing|hamstrung}}
 
 # {{transitive}} To [[lame]] or [[disable]] by [[cut]]ting the [[tendon]]s of the [[ham]] or [[knee]]; to hough; hence, to cripple; to incapacitate; to disable.
-#*So have they '''hamstrung''' the valor of the subject by seeking to effeminate us all at home. - [[w:John Milton|John Milton]]
+#* So have they '''hamstrung''' the valor of the subject by seeking to effeminate us all at home. - [[w:John Milton|John Milton]]
 
 ====Translations====
 {{trans-top|To lame or disable by cutting the tendons of the ham or knee; to hough; hence, to cripple; to incapacitate; to disable}}
@@ -38,13 +38,15 @@
 
 ===Noun===
 {{sv-noun|g=c}}
+
+# the act of gathering or hoarding consumables in anticipation of a shortage
+
+====Declension====
 {{sv-noun-unc-irreg-c|2=hamstringen}}
 
-# The act of gathering or hoarding consumables in anticipation of a shortage.
-
 ====Related terms====
-*[[hamstra]]
-*[[hamster]]
+* [[hamstra]]
+* [[hamster]]
 
 [[et:hamstring]]
 [[eo:hamstring]]
