/* Pronunciation */ South England <branch#16297145>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -6,6 +6,7 @@
 * {{a|UK|US}} {{IPA|/bɹæntʃ/}}, {{SAMPA|/br\{ntS/}}
 * {{audio|en-us-branch.ogg|Audio (US)}}
 * {{rhymes|æntʃ}}
+* {{a|South England}} {{IPA|/bɹɑːntʃ/}}
 
 ===Etymology===
 From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||paw|lang=la}}, possibly from Gaulish *''vranca'', akin to [[Old Norse]] {{term|vró||angle, corner|lang=non}}, [[Lithuanian]] {{term|rankà||hand}}, [[Old Church Slavonic]] {{term|rǫka||hand}}, [[Albanian]] {{term|rangë||yard work}}.
