--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -50,7 +50,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * French: {{t+|fr|branche|f}}, {{t+|fr|rameau|m}}
 * Georgian: {{t-|ka|შტო|tr=što|sc=Geor|xs=Georgian}}
 * German: {{t+|de|Ast|m}}, {{t+|de|Zweig|m}}
-* Greek: {{t+|el|κλαδί|n|tr=klaδí}},  {{t+|el|κλαρί|n|tr=klarí}}
+* Greek: {{t+|el|κλαδί|n|tr=kladí|sc=Grek}}, {{t+|el|κλαρί|n|tr=klarí|sc=Grek}}
 * Hebrew: {{t-|he|ענף|m|tr=anaf}}
 * Hindi: {{t|hi|डाल|f|tr=ḍāl|sc=Deva}}
 * Hungarian: {{t+|hu|ág}}
@@ -92,7 +92,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Dutch: {{t+|nl|tak}}
 * Finnish: {{t-|fi|haara}}
 * German: {{t+|de|Ästelung|m}}, {{t+|de|Zweigung|m}}
-* Greek: {{t|el|διακλάδωση|f|tr=δiakláδosi}},  {{t+|el|κλάδος|m|tr=kláδos}},  {{t|el|υποδιαίρεση|f|tr=ipoδiéresi}},  {{t|el|παρακλάδι|n|tr=parakláδi}}
+* Greek: {{t|el|διακλάδωση|f|tr=diakládosi|sc=Grek}}, {{t+|el|κλάδος|m|tr=kládos|sc=Grek}}, {{t|el|παρακλάδι|n|tr=parakládi|sc=Grek}}
 * Hebrew: {{t-|he|ענף|m|tr=anaf}}
 {{trans-mid}}
 * Hungarian: {{t|hu|leágazás}}
