--- a/en/f/fight.6879.wikitext
+++ b/en/f/fight.6879.wikitext
@@ -292,7 +292,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Dutch: {{t+|nl|gevecht|n}}, {{t+|nl|strijd|m}}
 * Finnish: {{t+|fi|taistelu}}
 * French: {{t+|fr|bataille|f}}
-* German: {{t+|de|Kampf|m}}
+* German: {{t+|de|Kampf|m}}, {{t|de|Schlacht|f}}
 * Hebrew: {{t-|he|קרב|m|tr=kráv}}
 * Icelandic: {{t-|is|bardagi|m}}
 * Italian: {{t+|it|battaglia|f}}, {{t+|it|combattimento|m}}
@@ -318,7 +318,7 @@ From {{etyl|ang}} ''[[feoht]]'', from the verb. Corresponding to Dutch ''[[gevec
 * Dutch: [[gevecht]] {{n}}, [[boel]] {{m}} {{qualifier|colloquial|Flanders}}
 * Finnish: {{t|fi|tappelu}}, {{t|fi|taistelu}}
 * French: {{t+|fr|bagarre|f}}
-* German: [[Keilerei]] {{f}}
+* German: [[Keilerei]] {{f}}, {{t|de|Prügelei|f}}
 * Hebrew: {{t-|he|ריב|m|tr=rív}}, {{t+|he|מאבק|m|tr=ma`avák}}
 * Italian: {{t-|it|rissa|f}}
 * Japanese: [[喧嘩]] (けんか, kenka)
