/* Translations */ chk++ (jbo) <play#16333479>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -483,9 +483,10 @@
 * {{ttbc|ar}}: (5) {{Arab|[[يعزف]]}} (6), {{Arab|[[يتمرن]]}}
 * {{ttbc|ar}}: {{Arab|[[يلعب]]}}
 * {{ttbc|gn}}: [[ñembosarái]]
-{{trans-mid}}
 * {{ttbc|io}}: [[ludar]] (1), [[plear]] (2, 4)
+{{checktrans-mid}}
 * {{ttbc|ia}}: [[jocar]]
+* {{ttbc|jbo}}: [[kelci]]
 * {{ttbc|tpn}}: [[nhemosaraîa]]
 {{trans-bottom}}
 
