t+cs:[[cítit]] ([[WT:EDIT|Assisted]]) <feel#16344397>

--- a/en/f/feel.6876.wikitext
+++ b/en/f/feel.6876.wikitext
@@ -77,6 +77,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Arabic: {{t+|ar|شعر|tr=shá3ara}}
 * Chinese:
 *: Mandarin: {{t|cmn|触摸|tr=chùmō|sc=Hans}}, {{t-|cmn|触|tr=chùm|sc=Hans}}, {{t-|cmn|摸|tr=mō|sc=Hans}}
+* Czech: {{t|cs|cítit}}
 * Danish: {{t-|da|føle}},  {{t|da|mærke}}
 * French: {{t+|fr|palper}},  {{t+|fr|toucher}}
 * German: {{t+|de|fühlen}},  {{t+|de|spüren}}
@@ -100,6 +101,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Arabic: {{t+|ar|شعر|tr=shá3ara}}
 * Chinese:
 *: Mandarin: {{t|zh|感到|tr=gǎndào|sc=Hani}}, {{t|zh|感覺|sc=Hani}}, {{t|zh|感觉|tr=gǎnjué|sc=Hani}}
+* Czech: {{t|cs|cítit}}
 * Danish: {{t-|da|føle}}
 * Esperanto: {{t|eo|senti}}
 * French: {{t+|fr|sentir}}
@@ -123,6 +125,7 @@ From {{etyl|enm}} {{term|felen|lang=enm}}, from {{etyl|ang}} {{term|felan|fēlan
 * Arabic: {{t+|ar|شعر|tr=shá3ara}}
 * Chinese:
 *: Mandarin: {{t|zh|覺得|sc=Hani}}, {{t|zh|觉得|tr=juéde|sc=Hani}}, {{t|zh|感覺|sc=Hani}}, {{t|zh|感觉|tr=gǎnjué|sc=Hani}}
+* Czech: {{t|cs|cítit}}
 * French: {{t+|fr|sentir}}, {{t+|fr|penser}}
 * German: {{t+|de|fühlen}}, {{t+|de|denken}},  {{t|de|das Gefühl haben}}
 * Hungarian: {{t+|hu|érez}},  {{t|hu|az az érzése van}}
