--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -125,6 +125,7 @@ Recorded since 1416, from {{etyl|fro}} {{term|briche|lang=fro}}, probably from a
 * Bulgarian: {{t|bg|тухли|p}}
 * Chinese:
 *: Mandarin: {{t|cmn|磚塊|sc=Hani}},  {{t|cmn|砖块|tr=zhuānkuài|sc=Hani}}, {{t|cmn|磚頭|sc=Hani}},  {{t|cmn|砖头|tr=zhuāntóu|sc=Hani}}
+* Czech: {{t|cs|cihla}}
 * Danish: {{t|da|mursten|c}}
 * Dutch: {{t+|nl|baksteen}}, {{t-|nl|bakstenen}}
 * Finnish: {{t+|fi|tiili}}
