/* translation gloss:act of cutting */ +cs:[[řez]]; +cs:[[říznutí]] <cut#16348507>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -161,6 +161,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 
 {{trans-top|act of cutting}}
 * Bulgarian: {{t|bg|рязане|n}}
+* Czech: {{t|cs|řez}}, {{t|cs|říznutí}}
 * Danish: {{t-|da|hug|n}}
 * Finnish: [[leikkaus]], [[viilto]], [[sivallus]]
 * French: {{t|fr|coupe|f}}, {{t|fr|entaille|f}}
