/* translation gloss:apply force such that an object comes toward the person or thing applying the force */ +cs:[[tahat]]; +cs:[[táhnout]]; +cs:[[vytahovat]] <pull#16348790>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -143,6 +143,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 
 {{trans-top|apply force such that an object comes toward the person or thing applying the force}}
 * Armenian: {{t-|hy|քաշել|tr=k'ašel}}, {{t-|hy|ձգել|tr=jgel}}
+* Czech: {{t|cs|tahat}}, {{t|cs|táhnout}}, {{t|cs|vytahovat}}
 * Danish: {{t+|da|trække}}
 * Esperanto: {{t-|eo|tiri|xs=Esperanto}}
 * Finnish: {{t+|fi|vetää}}
