--- a/en/o/olive.4769.wikitext
+++ b/en/o/olive.4769.wikitext
@@ -234,6 +234,19 @@
 ===Anagrams===
 * [[Elvio#Italian|Elvio]], [[ovile#Italian|ovile]], [[viole#Italian|viole]], [[voile#Italian|voile]]
 
+----
+
+==Middle High German==
+
+===Etymology===
+From {{etyl|la|gmh}} {{term|oliva|lang=la}}
+
+===Noun===
+{{gmh-noun|head=olīve|g=f}}
+# The [[olive]]
+[[Category:gmh:Fruits]]
+
+
 [[cs:olive]]
 [[co:olive]]
 [[da:olive]]
