--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -1,6 +1,8 @@
 {{also|悪|恶|亞|噩}}
 ==Translingual==
 
+[[Category:CJKV characters simplified differently in Japan and China|惡0]]
+
 ===Han character===
 {{Han char|rn=61|rad=心|as=08|sn=12|four=1033<sub>1</sub>|canj=一一心 (MMP)}}
 
