t+or:[[ଇସ୍ରାଏଲ]] ([[WT:EDIT|Assisted]]) <Israel#16392478>

--- a/en/i/Israel.2109.wikitext
+++ b/en/i/Israel.2109.wikitext
@@ -97,6 +97,7 @@ From {{etyl|he}} {{term|ישראל||Israel|lang=he|sc=Hebr|tr=yisra'él}}, which
 * Navajo: {{tø|nv|Ízrel bikéyah}}
 * Norwegian: {{t+|no|Israel}}
 * Old Church Slavonic: [[Їздраил҄ь]]
+* Oriya: {{t|or|ଇସ୍ରାଏଲ|sc=Orya}}
 * Pashto: {{t|ps|اسرايل|sc=ps-Arab|xs=Pashto}}
 * Persian: {{t+|fa|اسرائیل|tr=Esrâ’il|xs=Persian}}
 * Polish: {{t+|pl|Izrael|m}}
