--- a/en/s/suck.8436.wikitext
+++ b/en/s/suck.8436.wikitext
@@ -82,7 +82,7 @@
 * Bulgarian: {{t+|bg|смуча|tr=smuča}}
 * Burmese: {{t|my|စုပ်|tr=sok|sc=Mymr}}
 * Catalan: [[xuclar]]
-* Czech: {{t-|cs|sát}}
+* Czech: {{t-|cs|sát}}, {{t|cs|nasávat}}
 * Dutch: {{t|nl|zuigen}}
 * Esperanto: {{t|eo|suĉi |xs=Esperanto}}
 * Ewe: [[nyi]]
