--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -351,7 +351,7 @@
 * Urdu: {{t|ur|بجانا|tr=bajānā|sc=ur-Arab}}
 {{trans-bottom}}
 
-{{trans-top|produce music using a musical instrument ([[intransitive]] sense, not affecting a noun)}}
+{{trans-top|produce music using a musical instrument (intransitive sense, not affecting a noun)}}
 * Arabic: {{t|ar|عزف|tr=3ázafa|alt=عَزَفَ}}
 * Armenian: {{t-|hy|նվագել|tr=nvagel}}
 * Catalan: [[tocar]]
