t+zh-tw:[[胃]] ([[WT:EDIT|Assisted]]) <stomach#16428903>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -99,6 +99,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Taos: [[thį̀ę’éna]]
 * Telugu: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
 * Thai: {{t|th|ท้อง|tr=tóng|sc=Thai}}
+* Traditional Chinese: {{tø|zh-tw|胃|tr=wai6}}
 * Turkish: {{t+|tr|mide}}
 * Ukrainian: {{t|uk|шлунок|m|tr=šlúnok|sc=Cyrl}}
 * Upper Sorbian: [[žołdk]] {{m}}
