/* Translations */ use "yue" for Cantonese, "zh-tw" is Mandarin, although traditional only <stomach#16445816>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -49,6 +49,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Bulgarian: {{t|bg|стомах|m|tr=stomáh|sc=Cyrl}}
 * Chamicuro: {{tø|ccc|knani}}
 * Chinese:
+*: Cantonese: {{tø|yue|胃|tr=wai6|sc=Hant}}
 *: Mandarin: {{t-|cmn|胃|tr=wèi|sc=Hani}}, {{t-|cmn|肚子|tr=dùzi|sc=Hani}}
 * Croatian: {{t-|hr|želudac|m}}, {{t-|hr|stomak|m}}
 * Czech: {{t+|cs|žaludek|m}}
@@ -99,7 +100,6 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Taos: [[thį̀ę’éna]]
 * Telugu: [[పొట్ట]] (poTTa), [[కడుపు]] (kaDupu)
 * Thai: {{t|th|ท้อง|tr=tóng|sc=Thai}}
-* Traditional Chinese: {{tø|zh-tw|胃|tr=wai6}}
 * Turkish: {{t+|tr|mide}}
 * Ukrainian: {{t|uk|шлунок|m|tr=šlúnok|sc=Cyrl}}
 * Upper Sorbian: [[žołdk]] {{m}}
