--- a/en/r/représentant.1838.wikitext
+++ b/en/r/représentant.1838.wikitext
@@ -5,7 +5,7 @@
 * {{IPA|/ʁə.pʁe.zɑ̃.tɑ̃/|lang=fr}}, {{SAMPA|/R@.pRe.zA~.tA~/}}
 
 ===Verb===
-{{head|fr|present participle}}
+{{head|fr|verb form}}
 
 # {{present participle of|représenter|lang=fr}}; [[representing]]
 
