/* Pronunciation */  Added additional pronunciations <et cetera#16455894>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -15,7 +15,7 @@
 From {{etyl|la}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so forth}}
 
 ===Pronunciation===
-* {{IPA|/ˌɛt ˈsɛtəɹə/|/ˌɛkˈsɛt(ə)ɹə/|lang=en}}; see usage notes below
+* {{IPA|/ˌɛt ˈsɛt(ə)ɹə/|/ˌɛkˈsɛt(ə)ɹə/|/ˌɛkˈsɛdɹə/|lang=en}}; see usage notes below
 *: {{audio|en-us-etc.ogg|Audio (US)}}
 
 ===Phrase===
