--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -70,7 +70,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Spanish: {{t+|es|carne|f}}
 * Swahili: {{t+|sw|chembechembe|xs=Swahili}}
 * Swedish: {{t|sv|kött|n}}
-* [[Telugu]]: [[మాంసం]] (maamsam)
+* [[Telugu]]: {{t+|te|కండ|tr=kanDa}}
 * [[Volapük]]: {{t|vo|mid}}
 * [[Walloon]]: {{t|wa|tchå|xs=Walloon}}
 * Welsh: {{t|cy|cnawd|xs=Welsh}}
