--- a/en/均/均.13002.wikitext
+++ b/en/均/均.13002.wikitext
@@ -32,7 +32,11 @@
 # [[equally]]
 
 ====Readings====
-* {{ja-readings|on=[[きん]] (kin), [[うん]] (un)|kanyoon=[[いん]] (in)|kun=[[ならす]] (narasu)|nanori=[[ひとし]] (hitoshi)|nazuke=[[お]] (o), [[ただ]] (tada), [[なお]] (nao), [[なり]] (nari), [[ひら]] (hira), [[まさ]] (masa)}}
+{{ja-readings
+|on=[[きん]] (kin), [[うん]] (un)
+|kanyoon=[[いん]] (in)
+|kun=[[ならす|なら・す]] ([[均す|均・す]], nara-su)
+|nanori=[[お]] (o), [[ただ]] (tada), [[なお]] (nao), [[なり]] (nari), [[ひとし]] (hitoshi), [[ひら]] (hira), [[まさ]] (masa)}}
 
 ====Compounds====
 {{top4}}
