--- a/en/明/明.16950.wikitext
+++ b/en/明/明.16950.wikitext
@@ -1,8 +1,7 @@
 ==Translingual==
 
 ===Etymology===
-The etymology is ambiguous. The traditional etymology is: {{liushu|ic}}: {{term|日||sun|sc=Hani}} + {{term|月||moon|sc=Hani}}, which is what the modern form suggests.
-However, some older forms of the character have a more complex form, and show a moon shining through a window – the development is not as simple as the current form suggests.([[朙]]?)<ref>{{cite web
+The traditional etymology follows the modern form in finding {{liushu|ic}}: {{term|日||sun|sc=Hani}} + {{term|月||moon|sc=Hani}}. However, the etymology may be somewhat less simple, as alleged older forms of the character show the moon shining through a window. <!--([[朙]]?)--><ref>{{cite web
 |title=Etymology: 明
 |author=Richard Sears
 |url=http://www.internationalscientific.org/CharacterASP/CharacterEtymology.aspx?characterInput=%E6%98%8E&submitButton1=Etymology
@@ -14,20 +13,10 @@ However, some older forms of the character have a more complex form, and show a 
 # [[bright]], [[light]], [[brilliant]]
 # [[clear]]
 # [[w:Ming Dynasty|Ming Dynasty]]
+# ''a (typically male) [[given name]]'', sometimes used as a generic or stereotypical Chinese male name, like [[John]] in English
 
 ====References====
 * {{Han ref|kx=0491.120|dkj=13805|dj=0852.180|hdz=21491.080|uh=660E|ud=26126|bh=A9FA|bd=43514}}
-
-===Usage notes===
-<references/>
-
-<br>
-* Often commonly used as a generic or stereotypical Chinese male name, like {{term|John|lang=en}}.
-
-<br>
-[[zh:明]]
-
-----
 
 ==Cantonese==
 
@@ -106,7 +95,7 @@ However, some older forms of the character have a more complex form, and show a 
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[míng]] ([[ming2]])|wg=ming<sup>2</sup>}}
+{{cmn-hanzi|pin=[[míng]] ([[ming2]]), [[Míng]] ([[Ming2]])|wg=ming<sup>2</sup>, Ming<sup>2</sup>}}
 
 # {{defn|lang=cmn|sort=日04}}
 
@@ -161,6 +150,8 @@ However, some older forms of the character have a more complex form, and show a 
 {{vi-hantu|[[minh]]|rs=日04}}
 
 # {{defn|lang=vi|sort=日04}}
+
+[[Category:Chinese given names]]
 
 [[es:明]]
 [[fr:明]]
