--- a/en/t/tortoise.4772.wikitext
+++ b/en/t/tortoise.4772.wikitext
@@ -39,14 +39,16 @@
 * Italian: {{t+|it|tartaruga|f}}
 * Japanese: [[亀]] ([[かめ]], kame), [[陸亀]] ([[りくがめ]], rikugame)
 * Korean: [[거북]] (geobuk), [[거북이]] (geobugi)
+* Latin: {{t+|la|testudo|m}}
 * Latvian: {{t-|lv|bruņurupucis|m|xs=Latvian}}
 * Lithuanian: {{t-|lt|vėžlys|m|xs=Lithuanian}}
 * [[Macedonian]]: [[желка]] {{f}}
 * Mandarin: {{t-|cmn|王八|tr=wángba|sc=Hani}}
+* Nahuatl: {{t-|nah|āyotl}}
 * Norwegian: {{t-|no|skilpadde}}, {{t-|no|skjelpadde}} 
 {{trans-mid}}
 * [[Pali]]: {{tø|pi|kacchapa|m}}
-*[[malayalam]]:[[ആമ]] aama
+* [[malayalam]]:[[ആമ]] aama
 * Persian: {{t+|fa|لاک‌پشت|f|xs=Persian}}
 * Polish: [[żółw lądowy]] {{m}}
 * Portuguese: {{t+|pt|tartaruga|f}}, {{t+|pt|jabuti|m}}, {{t|pt|cágado}}
