--- a/en/旻/旻.16931.wikitext
+++ b/en/旻/旻.16931.wikitext
@@ -43,7 +43,7 @@
 ==Mandarin==
 
 ===Hanzi===
-{{cmn-hanzi|pin=[[mǐn]] ([[min3]])|wg=min<sup>3</sup>}}
+{{cmn-hanzi|pin=[[mín]] ([[min2]])|wg=min<sup>2</sup>}}
 
 # {{defn|lang=cmn|sort=日04}}
 
