--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -50,6 +50,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 * Burmese: {{t|my|ပြင်သစ်နိုင်ငံ|tr=pyin-thiq nain-gan|sc=Mymr|xs=Burmese}}
 * [[Catalan]]: {{t+|ca|França|f}}
 * [[Cebuano]]: {{tø|ceb|Pransiya}}
+* Cherokee: {{t|chr|ᎦᎸᏥᏱ|tr=Galvtsiyi|sc=Cher}}
 * Chinese:
 *: Mandarin: {{t-|cmn|法國|sc=Hani}}, {{t-|cmn|法国|tr=Fǎguó|sc=Hani}}, {{t|cmn|法蘭西|sc=Hani}}, {{t|cmn|法兰西|tr=Fǎlánxī|sc=Hani}}
 *: [[Min Nan]]: {{tø|nan|法國|tr=Hoat-kok}}
