t+hr:[[šljiva]] ([[WT:EDIT|Assisted]]) <plum#16501624>

--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -147,6 +147,7 @@ From {{etyl|ang|en}} {{term|plume|plūme|lang=ang}}, from {{proto|Germanic|prūm
 * Chinese:
 *: Mandarin: {{t-|cmn|李子|tr=lǐzi|sc=Hani}}
 *: [[Min Nan]]: {{tø|nan|李仔|tr=lí-á|sc=Hans}}
+* Croatian: {{t|hr|šljiva|f}}
 * Czech: {{t+|cs|švestka|f}}, {{t-|cs|slíva|f}}
 * Danish: {{t|da|blomme}}
 * Dutch: {{t+|nl|pruim}}
