/* Translations */ ka transliteration <find#16502624>

--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -65,7 +65,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 * Faroese: {{t|fo|finna}}
 * Finnish: {{t+|fi|löytää}}
 * French: {{t+|fr|trouver}}
-* Georgian: {{tø|ka|მიგნება|tr=migneba|sc=Geor}}, {{t|ka|პოვნა|sc=Geor}}
+* Georgian: {{tø|ka|მიგნება|tr=migneba|sc=Geor}}, {{t|ka|პოვნა|sc=Geor|tr=povna}}
 * German: {{t+|de|finden}}
 * Greek: {{t|el|βρίσκω|tr=vrísko}}
 * Hebrew: {{t-|he|מצא|tr=matzá}}
@@ -103,7 +103,7 @@ From {{etyl|ang}} {{term|findan|lang=ang}}, from {{proto|Germanic|finþanan|lang
 * Danish: {{t-|da|finde}}, {{t|da|udpege}}
 * Dutch: {{t+|nl|vinden}}, {{t+|nl|ontdekken}}
 * Finnish: {{t+|fi|osoittaa}}
-* Georgian: {{t|ka|მითითება|sc=Geor}}, {{t|ka|ჩვენება|sc=Geor}}
+* Georgian: {{t|ka|მითითება|sc=Geor|tr=mititeba}}, {{t|ka|ჩვენება|sc=Geor|tr=chveneba}}
 * Hebrew: {{t-|he|הצביע|tr=hitzbía}}
 * Japanese: {{t|ja|指摘する|tr=してきする, shiteki-suru|sc=Jpan}}
 {{trans-mid}}
