/* Italian */ Spanish <bridge#16512000>

--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -347,6 +347,9 @@ From {{etyl|en|fr}} {{term|bridge|lang=en}}.
 
 ==Italian==
 
+===Etymology===
+{{borrowing|en|bridge|lang=it}}.
+
 ===Noun===
 {{head|it|noun}} {{m|inv}}
 
@@ -355,6 +358,18 @@ From {{etyl|en|fr}} {{term|bridge|lang=en}}.
 ====Related terms====
 * [[bridgista]]
 * [[bridgistico]]
+
+----
+
+==Spanish==
+
+===Etymology===
+{{borrowing|en|bridge|lang=es}}.
+
+===Noun===
+{{es-noun|m|-}}
+
+# [[#English|bridge]] (card game)
 
 ----
 
