t+ltg:[[ūsta]] ([[WT:EDIT|Assisted]]) <port#16512642>

--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -62,6 +62,7 @@
 * Kazakh: {{t|kk|кемежай|tr=kemejay|sc=Cyrl}}
 {{trans-mid}}
 * Korean: {{t|ko|항구|tr=hanggu|sc=Kore}} ({{t|ko|港口|sc=Kore}})
+* Latgalian: {{tø|ltg|ūsta|f}}
 * Latvian: {{t|lv|osta|f}}
 * Lithuanian: {{t|lt|uostas|m}}
 * Macedonian: {{t|mk|пристаниште|n|tr=pristánište|sc=Cyrl}}
