--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -327,6 +327,7 @@
 * Dutch: {{t+|nl|spelen}}, {{t+|nl|bespelen}}
 * Finnish: {{t+|fi|soittaa}}
 * French: [[jouer]] [[de]]
+* {{trreq|Georgian}}
 * Greek: {{t|el|παίζω|tr=pézo}}
 * Hebrew: {{t|he|ניגן|alt=ניגן (ב־)|tr=nigén (b'-)}}
 * Hindi: {{t|hi|बजाना|tr=bajānā|sc=Deva}}
