t+ms:[[muntah]] ([[WT:EDIT|Assisted]]) <vomit#16523690>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -51,6 +51,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Latvian: {{t|lv|vemt}}
 * Lithuanian: {{t+|lt|vemti|xs=Lithuanian}}
 * Macedonian: {{t-|mk|повраќа|tr=póvraḱa}},  {{t-|mk|блуе|tr=blúe}}
+* Malay: {{t|ms|muntah}}
 * Maltese: [[irrimetta]], [[qala']]
 * Norwegian: {{t+|no|kaste opp}}, {{t+|no|spy}}, {{t|no|brekke seg}}
 * Old Irish: {{tø|sga|sceid|xs=Old Irish}}
