/* Derived terms */ <cut#16530944>

--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -322,6 +322,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 
 ====Derived terms====
 {{der-top|Terms derived from the verb ''cut''}}
+* [[becut]]
 * [[cut a caper]]
 * [[cut a deal]]
 * [[cut a rug]] / [[cut the rug]]
@@ -368,9 +369,15 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * [[cutting edge]]
 * [[cutting remark]]
 * [[fish or cut bait]]
+* [[forcut]]
+* [[forecut]]
 * [[fussy cut]]
 * [[have one's work cut out for one]]
+* [[incut]]
 * [[measure twice cut once]] / [[measure twice and cut once]]
+* [[offcut]]
+* [[outcut]]
+* [[overcut]]
 * [[undercut]]
 {{rel-bottom}}
 
