--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -100,8 +100,9 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Indonesian: {{t|id|menarik|xs=Indonesian}},  {{t|id|tarik|xs=Indonesian}}
 * Italian: [[tirare]] [[:it:tirare|(it)]]
 * Japanese: {{t+|ja|引く|tr=ひく, hiku}}
-* Korean: {{t+|ko|끌다|tr=kkeulda|sc=Hang}}, {{t+|ko|뽑다|tr=ppopda|sc=Hang}}
+* Jèrriais: {{tø|roa-jer|haler}}
 {{trans-mid}}
+* Korean: {{t+|ko|끌다|tr=kkeulda|sc=Hang}}, {{t+|ko|뽑다|tr=ppopda|sc=Hang}}
 * Kurdish: {{ku-Arab|[[ڕاکێشه‌]]}}
 * Latin: {{t-|la|vello}},  {{t+|la|traho}}
 * Malay: {{t|ms|tarik|xs=Malay}}
