t+no:[[trekke]] t+no:[[dra]] t+no:[[gjennomføre]] ([[WT:EDIT|Assisted]]) <pull#16550632>

--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -106,6 +106,7 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Kurdish: {{ku-Arab|[[ڕاکێشه‌]]}}
 * Latin: {{t-|la|vello}},  {{t+|la|traho}}
 * Malay: {{t|ms|tarik|xs=Malay}}
+* Norwegian: {{t|no|trekke}}, {{t|no|dra}}
 * Polish: [[ciągnąć]], [[pociągnąć]]
 * Portuguese: {{t+|pt|puxar}},  {{t+|pt|tirar}}
 * Romanian: {{t-|ro|trage}}
@@ -130,11 +131,13 @@ From {{etyl|enm}} {{term|pullen|lang=enm}}, from {{etyl|ang}} {{term|pullian||to
 * Finnish: {{t|fi|vetää}}
 {{trans-mid}}
 * French: {{t+|fr|retirer}}
+* Norwegian: {{t|no|trekke}}
 {{trans-bottom}}
 
 {{trans-top|do, perform}}
 * Finnish: {{t|fi|tehdä}}
 {{trans-mid}}
+* Norwegian: {{t|no|gjennomføre}}
 {{trans-bottom}}
 
 {{trans-top|retrieve or generate for use}}
