--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -39,7 +39,7 @@ From {{etyl|fr|en}} {{term|Européen|lang=fr}}, ''[[viâ]]'' {{etyl|la|en}} {{te
 * Finnish: {{t+|fi|eurooppalainen}}
 * French: {{t+|fr|européen|m}}, {{t+|fr|européenne|f}}
 * German: {{t+|de|europäisch}}
-* Greek: {{t+|el|ευρωπαϊκός|tr=evropa'ikós}}
+* Greek: {{t+|el|ευρωπαϊκός|tr=evropaïkós|sc=Grek}}
 * Hungarian: {{t+|hu|európai}}
 * [[Interlingua]]: [[europee]]
 {{trans-mid}}
@@ -83,7 +83,7 @@ From {{etyl|fr|en}} {{term|Européen|lang=fr}}, ''[[viâ]]'' {{etyl|la|en}} {{te
 * Finnish: {{t+|fi|eurooppalainen}}
 * French: {{t+|fr|Européen|m}}, {{t+|fr|Européenne|f}}
 * German: {{t+|de|Europäer|m}}, {{t+|de|Europäerin|f}}
-* Greek: {{t+|el|Ευρωπαίος|m|tr=evropéos}},  {{t|el|Ευρωπαία|f|tr=evropéa}}
+* Greek: {{t+|el|Ευρωπαίος|m|tr=Evropaíos|sc=Grek}}, {{t|el|Ευρωπαία|f|tr=Evropaía|sc=Grek}}
 * Hindi: {{t|hi|युरोपियन|tr=yuropiyan|xs=Hindi}}
 * Hungarian: [[európai]], [[européer]]
 {{trans-mid}}
