--- a/en/e/European.2114.wikitext
+++ b/en/e/European.2114.wikitext
@@ -39,7 +39,7 @@ From {{etyl|fr|en}} {{term|Européen|lang=fr}}, ''[[viâ]]'' {{etyl|la|en}} {{te
 * Finnish: {{t+|fi|eurooppalainen}}
 * French: {{t+|fr|européen|m}}, {{t+|fr|européenne|f}}
 * German: {{t+|de|europäisch}}
-* Greek: {{t+|el|ευρωπαϊκός|tr=evropaïkós|sc=Grek}}
+* Greek: {{t+|el|ευρωπαϊκός|m|tr=evropaïkós|sc=Grek}}
 * Hungarian: {{t+|hu|európai}}
 * Interlingua: [[europee]]
 {{trans-mid}}
