--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -53,7 +53,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Finnish: {{t+|fi|liha}}
 * French: {{t+|fr|chair}}
 * German: {{t+|de|Fleisch|n}}
-* Greek: t|el|σάρκα|f|tr=sárka|sc=Grek}}
+* Greek: {{t|el|σάρκα|f|tr=sárka|sc=Grek}}
 * Hungarian: {{t+|hu|hús}}
 * Ido: [[karno]]
 * Irish: {{t+|ga|feoil|f|xs=Irish}}
@@ -84,7 +84,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Finnish: {{t+|fi|liha}}
 * French: {{t|fr|chair|f}}
 * German: {{t+|de|Fleisch|n}}
-* Greek: t|el|κρέας|n|tr=kréas|sc=Grek}}
+* Greek: {{t|el|κρέας|n|tr=kréas|sc=Grek}}
 {{trans-mid}}
 * Hungarian: {{t+|hu|hús}}
 * Irish: {{t+|ga|feoil|f|xs=Irish}}
@@ -101,7 +101,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Danish: {{t-|da|krop}}
 * French: {{t+|fr|corps}}
 * German: {{t+|de|Fleisch|n}}, {{t+|de|Leib|m}}
-* Greek: t|el|σάρκα|f|tr=sárka|sc=Grek}}
+* Greek: {{t|el|σάρκα|f|tr=sárka|sc=Grek}}
 {{trans-mid}}
 * Ido: [[korpo]]
 * Latvian: {{t|lv|ķermenis|m}}
@@ -115,7 +115,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * French: {{t|fr|peau}}
 * German: {{t+|de|Haut|n}}
 {{trans-mid}}
-* Greek: t|el|δέρμα|n|tr=dérma|sc=Grek}}
+* Greek: {{t|el|δέρμα|n|tr=dérma|sc=Grek}}
 * Scottish Gaelic: [[craiceann]] {{m}}
 * Swahili: {{t+|sw|ngozi|xs=Swahili}}
 * Volapük: {{t|vo|skin}}
@@ -128,7 +128,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 * Finnish: {{t+|fi|malto}}, {{t+|fi|hedelmäliha}}
 * French: {{t+|fr|pulpe}}
 * German: {{t+|de|Fleisch|n}}, {{t+|de|Fruchtfleisch|n}}
-* Greek: t|el|σάρκα|f|tr=sárka|sc=Grek}}
+* Greek: {{t|el|σάρκα|f|tr=sárka|sc=Grek}}
 {{trans-mid}}
 * Ido: [[pulpo]]
 * Polish: {{t+|pl|miąższ|m}}
