t+roa-jer:[[Êtats Unnis d'Améthique]] t-balance ([[WT:EDIT|Assisted]]) <United States of America#16558967>

--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -56,6 +56,7 @@
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá|xs=Irish}}, {{t-|ga|Meiriceá|xs=Irish}}
 * Italian: {{t+|it|Stati Uniti d'America|m|p}}, (''short form'') {{t+|it|Stati Uniti|m|p}}, {{t-|it|SUA}}
 * Japanese: {{t+|ja|米国|tr=べいこく, Béikoku}}, {{t+|ja|アメリカ合衆国|tr=アメリカがっしゅうこく, Amerika Gasshūkoku}}, {{t+|ja|米|tr=べい, Bei-}} (''abbreviation''), {{t|ja|アメリカ|tr=Amerika|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|Êtats Unnis d'Améthique|m|p}}
 * [[Kannada]]: {{t|kn|ಅಮೇರಿಕ ಸಂಯುಕ್ತ ಸಂಸ್ಥಾನ|tr=amērik sanyukta sansthān|sc=Knda}}
 * [[Kashmiri]]: {{t|ks|संयुक्त राज्‍य अमेरिका|tr=sanyukta rājya amerikā|sc=ks-Arab}}
 * Kazakh: {{t|kk|Америка Құрама Штаттары|tr=Amerika Qurama Ştattarı|sc=Cyrl}}
@@ -65,9 +66,9 @@
 * [[Kyrgyz]]: {{t|ky|Америка Кошмо Штаттары|tr=Amerika Koşmo Ştattarı|sc=Cyrl}}
 * [[Lakota]]: {{tø|lkt|Mílahaŋska Tȟamákȟočhe}}
 * [[Lao]]: {{t-|lo|ສະຫະລັດອະເມລິກາ|tr=saha lat 'ameelikaa|sc=Laoo|xs=Lao}}
+{{trans-mid}}
 * [[Latgalian]]: {{tø|ltg|Amerikys Saškiertuos Vaļsteibys}}, {{tø|ltg|ASV}}
 * Latin: {{t|la|Respublicae Unitae Americae}}, {{t|la|Status Uniti Americae}}, {{t|la|Civitates Foederatae Americae}}
-{{trans-mid}}
 * Latvian: {{t-|lv|Amerikas Savienotās Valstis|xs=Latvian}}, {{t-|lv|ASV|xs=Latvian}}
 * {{trreq|lzz}}
 * Lithuanian: {{t+|lt|Jungtinės Amerikos Valstijos|xs=Lithuanian}}, {{t+|lt|JAV|xs=Lithuanian}}
