--- a/en/b/beautiful.7394.wikitext
+++ b/en/b/beautiful.7394.wikitext
@@ -97,8 +97,9 @@ The comparatives '''[[beautifuler]]''' and '''[[beautifuller]]''', and the super
 * Irish: {{t-|ga|álainn|xs=Irish}}
 * Italian: {{t+|it|bello}}
 * Japanese: {{t+|ja|美しい|tr=うつくしい, utsukushii}}, {{t-|ja|綺麗}}, {{t-|ja|きれい|tr=kirei}}, {{t+|ja|素敵|tr=すてき, suteki}}
-* Khmer: {{Khmr|[[ស្អាត]]}} (saāt), {{t-|km|ល្អ|tr=l'ɑɑ|sc=Khmr|xs=Khmer}}
 {{trans-mid}}
+* Jèrriais: {{tø|roa-jer|bieau|m}}, {{tø|roa-jer|belle|f}}
+* Khmer: {{Khmr|[[ស្អាត]]}} (saāt), {{t-|km|ល្អ|tr=l'ɑɑ|sc=Khmr|xs=Khmer}}
 * Korean: {{qualifier|attributive}} {{t|ko|아름다운|tr=areumdaun|sc=Kore}}, {{qualifier|predicative}} {{t|ko|아름답다|tr=areumdapda|sc=Kore}}
 * Kurdish: {{ku-Arab|[[جوان]]}}, {{ku-Arab|[[ئێسک سووک]]}}
 * Lao: {{t|lo|ງາມ|tr=ngaam|sc=Laoo}}
