--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -79,7 +79,7 @@ From {{etyl|frm}} {{term|fondre|lang=frm}}.
 ====Verb====
 {{en-verb}}
 
-# To [[melt]].
+# {{transitive}} To [[melt]], especially of [[metal]] in an [[industry|industrial]] setting.
 
 =====Translations=====
 {{trans-top|to melt}}
