--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -81,6 +81,9 @@ From {{etyl|frm}} {{term|fondre|lang=frm}}.
 
 # {{transitive}} To [[melt]], especially of [[metal]] in an [[industry|industrial]] setting.
 
+====Related terms====
+[[foundry]]
+
 =====Translations=====
 {{trans-top|to melt}}
 * Armenian: {{t-|hy|ձուլել|tr=julel}}, {{t|hy|հալել|tr=halel}}, {{t-|hy|թափել|tr=t’ap’el}}
