--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -81,7 +81,7 @@ From {{etyl|frm}} {{term|fondre|lang=frm}}.
 
 # {{transitive}} To [[melt]], especially of [[metal]] in an [[industry|industrial]] setting.
 
-====Related terms====
+=====Related terms=====
 [[foundry]]
 
 =====Translations=====
