--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -612,7 +612,7 @@
 {{etyl|en|it}}
 
 ===Noun===
-'''play''' {{m|inv}}
+{{head|it|noun|g=m}} {{inv}}
 
 # [[#English|play]] (theatrical performance; start key)
 
@@ -622,7 +622,6 @@
 # used to start a game of Tennis
 
 [[Category:Italian interjections]]
-[[Category:Italian nouns]]
 
 [[ang:play]]
 [[ar:play]]
