--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -1,8 +1,11 @@
 ==English==
 [[Image:US Navy p coat wiki.jpg|thumb|Navy pea coat]]
 
+===Alternative forms===
+* {{l|en|cote}} {{qualifier|obsolete}}
+
 ===Etymology===
-{{etyl|enm}}, from {{etyl|fro}} {{term|cote|lang=fro}}, from {{etyl|odt}} {{recons|kotta|lang=odt}} (compare German {{term|Kotze|lang=de}} ‘shaggy overcoat’), from {{proto|Indo-European|gud-|lang=en}} (compare Ancient Greek {{term|βεῦδος|tr=beũdos|lag=grc}} ‘woman's attire’).
+{{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|fro}} {{term|cote|lang=fro}}, {{term|cotte||outer garmet with sleeves|lang=fro}}, from Old {{etyl|frk}} {{recons|kotta||coat|lang=frk}}, from {{proto|Germanic|kuttō||kuttōn|cowl, woolen cloth, coat|lang=en}}, perhaps from {{proto|Indo-European|gʷeud-|woolen clothes|lang=en}}. Cognate with {{etyl|goh|-}} {{term|kozza|lang=goh}}, {{term|kozzo||woolen coat|lang=goh}} (Modern {{term|Kotze|lang=de}}), {{etyl|gml|-}} {{term|kot||coat|lang=gml}}, Ancient Greek {{term|βεῦδος||woman's attire|tr=beũdos|lag=grc}}.
 
 ===Pronunciation===
 * {{audio|en-us-coat.ogg|Audio (US)}}
