--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -134,7 +134,7 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 
 {{trans-top|to cover as a coat}}
 * Finnish: {{t+|fi|peittää}}
-* Greek: {{t|el|επιστρώνω|tr=epistróno}}, {{t|el|καλύπτω|tr=kalýpto}}
+* Greek: {{{t|el|καλύπτω|tr=kalýpto|sc=Grek}}
 {{trans-mid}}
 * Swahili: {{t+|sw|koti|xs=Swahili}}
 * Swedish: {{t+|sv|täcka}}
