--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -156,6 +156,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Swahili: {{t+|sw|tumbo|xs=Swahili}}
 * Swedish: {{t+|sv|buk}}, {{t+|sv|mage|c}}
 * Thai: {{t|th|ท้อง|tr=tóng|sc=Thai}}
+* Tok Pisin: {{t|tpi|bel}}
 * Ukrainian: {{t|uk|живіт|m|tr=žyvít|sc=Cyrl}}
 * Urdu: {{t|ur|پیٹ|m|tr=pēṭ|sc=ur-Arab}}
 * Vietnamese: {{t|vi|bụng}}
