t+tpi:[[han]] ([[WT:EDIT|Assisted]]) <branch#16578998>

--- a/en/b/branch.7390.wikitext
+++ b/en/b/branch.7390.wikitext
@@ -79,6 +79,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Tagalog: {{t-|tl|sanga|xs=Tagalog}}
 * Tamil: {{t|ta|கிளை|tr=kiḷai|sc=Taml}}
 * Telugu: [[కొమ్మ]], [[శాఖ]]
+* Tok Pisin: {{t|tpi|han}}
 * Turkish: {{t+|tr|dal}}
 * Udi: {{tø|udi|чӀугъ}}
 * Vietnamese: {{t+|vi|nhánh|xs=Vietnamese}}
@@ -105,6 +106,7 @@ From {{etyl|fro}} {{term|branche|lang=fro}}, from {{etyl|VL.}} {{term|branca||pa
 * Slovene: {{t+|sl|veja|f}}
 * Swahili: {{t+|sw|tanzu|xs=Swahili}}
 * Tagalog: {{t|tl|sangay|xs=Tagalog}}
+* Tok Pisin: {{t|tpi|han}}
 * Turkish: {{t+|tr|dal}}
 {{trans-bottom}}
 
