--- a/en/s/stab.8437.wikitext
+++ b/en/s/stab.8437.wikitext
@@ -113,6 +113,7 @@
 * Serbian: {{t-|sr|bosti}}
 * Spanish: {{t+|es|apuñalar}}, {{t-|es|acuchillar}}
 * Swedish: {{t|sv|sticka}}
+* Tagalog: {{t|tl|saksak}}
 * Turkish: {{t|tr|bıçaklamak}}, {{t|tr|şişlemek}}
 * Welsh: {{t|cy|gwanu}}, {{t|cy|trywanu}}
 {{trans-bottom}}
