--- a/en/i/i_e_.7209.wikitext
+++ b/en/i/i_e_.7209.wikitext
@@ -45,7 +45,7 @@ From {{etyl|la}} {{term|i.e.|lang=la}}, an abbreviation of {{term|lang=la|id est
 * Norwegian:
 *: Bokmål: {{t+|nb|dvs.}}
 *: Nynorsk: {{t|nn|d.e.}}, {{t|nn|dvs.}}
-* Arabic: {{Arab|[به عبارت دیگر]}}
+* persian: <small>به عبارت دیگر</small>
 * Polish: [[tzn.]] {{qualifier|[[to]] [[znaczy]]}}, [[tj.]] {{qualifier|[[to]] [[jest]]}}
 * Portuguese: [[isto é]], {{t|pt|ou seja}}
 * Russian: [[т. е.]] ([[то есть]], ''tó jest’'')
