--- a/en/s/straight.7217.wikitext
+++ b/en/s/straight.7217.wikitext
@@ -104,6 +104,7 @@
 * Chinese:
 *: Mandarin: {{t|zh|直|tr=zhí|sc=Hani}}
 * Czech: {{t-|cs|přímý|m}}
+* Dalmatian: {{t|dlm|drat}}
 * Dutch: {{t+|nl|recht}}, {{t-|nl|rechte}}
 * Esperanto: {{t|eo|rekta}}
 * Finnish: {{t+|fi|suora}}
