--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -51,6 +51,7 @@
 * {{trreq|hil}}
 * Hindi: {{t-|hi|संयुक्त राज्य अमरीका|tr=sanyukta rājya amrīkā|xs=Hindi}}, {{t-|hi|संयुक्त राष्ट्र अमरीका|tr=sanyukta rāṣṭra amrīkā|xs=Hindi}}
 * Hungarian: {{t+|hu|Amerikai Egyesült Államok}}, {{t+|hu|Egyesült Államok}}, {{t+|hu|USA}}
+* Icelandic: {{t|is|Bandaríka|n}}
 * Indonesian: {{t-|id|Amerika Serikat|xs=Indonesian}}
 * Interlingua: [[Statos Unite de America]]
 * Irish: {{t|ga|Stáit Aontaithe Mheiriceá|xs=Irish}}, {{t-|ga|Meiriceá|xs=Irish}}
