--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -56,7 +56,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Dutch: {{t+|nl|maag|f}}
 * Finnish: {{t|fi|mahalaukku}}, {{t|fi|vatsalaukku}}
 * French: {{t+|fr|estomac|m}}
-* {{trreq|Georgian}}
+* Georgian: კუჭის (kuchis) 
 * German: {{t+|de|Magen|m}}
 * Greek: {{t+|el|στομάχι|n|tr=stomáchi}}, {{t+|el|στόμαχος|m|tr=stómachos}}
 ** Ancient: {{tø|grc|στόμαχος|m|tr=stómachos}}, {{tø|grc|γαστήρ|m|tr=ɣastír}}
