--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -70,7 +70,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Italian: {{t+|it|stomaco|m}}
 * Japanese: {{t|ja|胃|tr=い, i|sc=Jpan}}, {{t|ja|お腹|tr=おなか, o-naka|sc=Jpan}}, {{t|ja|腹|tr=はら, hara|sc=Jpan}}
 * Kazakh: {{t+|kk|асқазан|tr=asqazan|sc=Cyrl|xs=Kazakh}}
-* {{trreq|Khmer}}
+* Khmer: {{t|km|ក្រពះ|tr=krɑpeah|sc=Khmr}}
 * Korean: {{t|ko|위|tr=wi|sc=Kore}} ([[胃]])
 * Lao: {{t|lo|ກະເພາະ|tr=ka phǫ|sc=Laoo}}
 * Latgalian: {{tø|ltg|pasirds}}
