t+et:[[kõht]] t+et:[[magu]] t-balance t+lv:[[vēders]] t+lt:[[pilvas]] ([[WT:EDIT|Assisted]]) <stomach#16619130>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -58,6 +58,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 * Czech: {{t+|cs|žaludek|m}}
 * Danish: {{t-|da|bug|c}}
 * Dutch: {{t+|nl|maag|f}}
+* Estonian: {{t|et|kõht}}, {{t|et|magu}}
 * Finnish: {{t|fi|mahalaukku}}, {{t|fi|vatsalaukku}}
 * French: {{t+|fr|estomac|m}}
 * Georgian: {{t|ka|კუჭი|tr=kuči|sc=Geor}}
@@ -136,6 +137,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 *: Mandarin: {{t|zh|腹部|tr=fùbù|sc=Hani}}, {{t-|zh|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t-|cs|břicho|n}}
 * Dutch: {{t+|nl|buik}}
+* Estonian: {{t|et|magu}}
 * Finnish: {{t+|fi|maha}}, {{t+|fi|vatsa}}
 * French: {{t+|fr|ventre|m}}, {{t+|fr|bedon|m}} ([[pot belly]])
 * Georgian: {{t|ka|მუცელი|tr=muc'eli}}
@@ -155,6 +157,8 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 *: Sorani: {{t|ku|زگ|tr=zig|sc=ku-Arab}}, {{t|ku|ورگ|tr=wirg|sc=ku-Arab}}
 {{trans-mid}}
 * Kyrgyz: {{t|ky|карын|tr=qarın|sc=Cyrl}}
+* Latvian: {{t|lv|vēders|m}}
+* Lithuanian: {{t|lt|pilvas|m}}
 * Luhya: {{tø|luy|enda}}
 * Macedonian: {{t-|mk|стомак|m|tr=stómak}}, {{t-|mk|мев|m|tr=mev}}
 * Malay: {{t|ms|perut}}
