--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -137,7 +137,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 *: Mandarin: {{t|zh|腹部|tr=fùbù|sc=Hani}}, {{t-|zh|肚子|tr=dùzi|sc=Hani}}
 * Czech: {{t-|cs|břicho|n}}
 * Dutch: {{t+|nl|buik}}
-* Estonian: {{t|et|magu}}
+* Estonian: {{t|et|kõht}}, {{t|et|magu}}
 * Finnish: {{t+|fi|maha}}, {{t+|fi|vatsa}}
 * French: {{t+|fr|ventre|m}}, {{t+|fr|bedon|m}} ([[pot belly]])
 * Georgian: {{t|ka|მუცელი|tr=muc'eli}}
