--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -15,7 +15,7 @@ From {{etyl|enm}} {{term|stomak|lang=enm}}, from {{etyl|fro}} {{term|estomac|lan
 {{en-noun}}
 
 # An [[organ]] in animals that stores food in the process of [[digestion]].
-# The [[belly]].
+# {{informal}} The [[belly]].
 # {{obsolete}} [[pride|Pride]], [[haughtiness]].
 #* '''1590''', Edmund Spenser, ''The Faerie Queene'', II.vii:
 #*: Sterne was his looke, and full of '''stomacke''' vaine, / His portaunce terrible, and stature tall [...].
