--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -29,6 +29,7 @@ Alternate etymology connects {{etyl|frk|-}} *''blund'' to {{proto|Germanic|blund
 * [[Catalan]]: {{t+|ca|ros|m}} (only hair, not skin)
 * Chinese:
 *: Mandarin: {{t|zh|金髮|sc=Hani}}, {{t|zh|金发|tr=jīnfà|sc=Hani}} {{qualifier|blond hair}}
+* Czech: {{t|cs|blondýna|f}}, {{t|cs|blonďák|m}}
 * Danish: {{t|da|lyshåret}}; blond, {{t|da|blondine}}
 * Dutch: {{t+|nl|blond}}, {{t+|nl|blondine}}
 * Esperanto: {{t-|eo|blondulo|xs=Esperanto}}, {{t-|eo|blondulino|xs=Esperanto}}
