--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -48,6 +48,7 @@ From {{etyl|ang|en}} {{term|flæsc|flǣsc|lang=ang}}, from {{proto|Germanic|flai
 *: [[Egyptian Arabic]]: {{tø|arz|لحم|m|tr=laḥm|sc=Arab}}
 * Armenian: {{t+|hy|միս|tr=mis}}
 * Catalan: [[carn]] {{f}}
+* Czech: {{t|cs|maso|n}}
 * Danish: {{t+|da|kød}}
 * Dutch: {{t+|nl|vlees|n}}
 * Finnish: {{t+|fi|liha}}
