/* translation gloss:to pick */ +cs:[[volit]]; +cs:[[zvolit]]; +cs:[[vybrat]] <choose#16621432>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -97,6 +97,7 @@ From {{etyl|enm}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{ety
 *: Gan: {{tø|gan|簡|sc=Hani}}, {{tø|gan|简|tr=gan3|sc=Hani}}
 *: Mandarin: {{t-|cmn|選擇|sc=Hani}}, {{t-|cmn|选择|tr=xuǎnzé|sc=Hani}}, {{t|cmn|挑選|sc=Hani}},  {{t|cmn|挑选|tr=tiāoxuǎn|sc=Hani}}
 * Croatian: {{t-|hr|izabrati}}, {{t-|hr|odabrati}}
+* Czech: {{t|cs|volit}}, {{t|cs|zvolit}}, {{t|cs|vybrat}}
 * Danish: {{t|da|udvælge}}, {{t|da|vælge}}, {{t|da|foretrække}}
 * Dutch: {{t+|nl|kiezen}}, {{t+|nl|uitkiezen}}
 * Finnish: {{t+|fi|valita}}
