/* Old French */ IPA <France#16639197>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -223,13 +223,16 @@ From {{etyl|fro|fr}} {{term|France|lang=fro}}, from {{etyl|LL.|fr}} {{term|Franc
 ===Etymology===
 From {{etyl|la|fro}} {{term|Francia|lang=la}}, from {{term|Franci|Francī|lang=la}}, the name of a Germanic tribe.
 
+===Pronunciation===
+* {{IPA|/frãnt.sə/|lang=fro}}
+
 ===Proper noun===
 {{fro-proper noun|f}}
 
 # {{l|en|France}} {{gloss|country}}
 
 [[Category:fro:Countries]]
-[[Category:fro:France| ]]
+[[Category:fro:France]]
 
 [[az:France]]
 [[zh-min-nan:France]]
