--- a/en/c/chose.6833.wikitext
+++ b/en/c/chose.6833.wikitext
@@ -43,6 +43,18 @@ From {{etyl|fro|fr}} < {{etyl|la|fr}} {{term|causa|lang=la}}. Compare Italian {{
 
 ----
 
+==Jèrriais==
+
+===Etymology===
+{{rfe|lang=roa-jer}}
+
+===Adjective===
+{{roa-jer-adj-mf}}
+
+# [[self-conscious]]
+
+----
+
 ==Middle French==
 
 ===Noun===
