--- a/en/n/New Zealand.2106.wikitext
+++ b/en/n/New Zealand.2106.wikitext
@@ -54,6 +54,7 @@ From {{etyl|nl}} ''[[Nieuw-Zeeland]]'', "new Zeeland", after the Dutch settlemen
 * Irish: {{t-|ga|Nua-Shéalainn|f|alt=An Nua-Shéalainn|xs=Irish}}
 * Italian: {{t+|it|Nuova Zelanda|f}}
 * Japanese: {{t-|ja|ニュージーランド|tr=Nyūjīrando}}, {{t|ja|ニュー・ジーランド|tr=Nyū-Jīrando|sc=Jpan}}
+* Jèrriais: {{tø|roa-jer|Nouvelle Zélande|f}}
 * [[Kalenjin]]: {{tø|kln|Nyuziland}}
 * [[Kamba]]: {{tø|kam|Nyuziland}}
 * [[Kannada]]: {{t|kn|ನ್ಯೂ ಜೀಲ್ಯಾಂಡ್|tr=n'yū jīlyāṇḍ|sc=Knda}}
