--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -121,7 +121,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from
 {{trans-mid}}
 * Kurdish:
 *: Kurmanji: [[sekreter]]
-* Portuguese: {{t+|pt|escrivaninha|f}}
+* Portuguese: {{t+|pt|escrivaninha|f}}, {{t|pt|secretária|f}}
 * Russian: {{t|ru|секретер|m|tr=sekretér}}
 * Spanish: {{t+|es|escribanía|f}}
 * Swahili: {{t|sw|makarani|xs=Swahili}}
