--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -86,7 +86,7 @@
 * Nepali: {{t|ne|संयुक्त राज्य अमेरिका|tr=sanyukta rājya amerikā|sc=Deva}}
 * Northern Sami: {{tø|se|Amerihká ovttastuvvan stáhtat}}
 * Norwegian: {{t+|no|Amerikas forente stater}}, {{t|no|De forente stater}}
-* Ossetian: {{tø|os|Америкӕйы Иугонд Штаттӕ|tr=Amerikäjy Iugond Štattä|sc=Cyrl}}
+* Ossetian: {{tø|os|Америкӕйы Иугонд Штаттӕ|tr=Amerikæjy Iugond Štattæ|sc=Cyrl}}
 * Palauan: [[Merikel]]
 * Persian: {{t|fa|ایالات متحده آمریکا|tr=Eyâlât-e Mottahede-ye Âmrikâ|alt=ایالات متحدۀ آمریکا|sc=fa-Arab}}
 * Polish: {{t-|pl|Stany Zjednoczone Ameryki|m|p}}, {{t-|pl|Stany Zjednoczone Ameryki Północnej}}, ''short:'' {{t+|pl|Stany Zjednoczone}}, ''colloquial:'' {{t|pl|Stany}}, {{t+|pl|USA}}
