--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -31,7 +31,7 @@
 * Bulgarian: {{t|bg|Съединени Американски Щати|m|p|tr=Sǎedinéni Amerikánski Štáti}}, {{t|bg|САЩ|m|p|tr=sašt}}
 * Burmese: {{t|my|အမေရိကန်ပြည်ထောင်စုသမတနိုင်ငံ|sc=Mymr|tr=ămeri.kan pyidaungzu. thămăta. naingngan}}
 * Catalan: {{t|ca|Estats Units d'Amèrica|m|p}}
-* Chechen: {{tø|ce|Американ Цхьанакхетта Штаташ|tr=Amerikan Cẋanaqetta Ştataş}}
+* Chechen: {{tø|ce|Американ Цхьанакхетта Штаташ|tr=Amerikan Cẋanaqetta Štataš}}
 * Chinese:
 *: Cantonese: {{tø|yue|美利堅合眾國|tr=mei5lei6gin1hap6zung3gwok3|sc=Hani|xs=Cantonese}}, {{tø|yue|美國|tr=mei5gwok3|sc=Hani|xs=Cantonese}}, {{t-|cmn|美|tr=mei5|sc=Hani|xs=Cantonese}} (''abbreviation'')
 *: Mandarin: {{t|cmn|美利堅合眾國|sc=Hani}}, {{t-|cmn|美利坚合众国|tr=[[Měilìjiān Hézhòngguó]]|sc=Hani}}, {{t-|cmn|美國|sc=Hani}}, {{t-|cmn|美国|tr=[[Měiguó]]|sc=Hani}}, {{t-|cmn|美|tr=[[Měi|Měi-]]|sc=Hani}} (''abbreviation'')
