--- a/en/u/United States of America.2102.wikitext
+++ b/en/u/United States of America.2102.wikitext
@@ -34,7 +34,7 @@
 * Chechen: {{tø|ce|Американ Цхьанакхетта Штаташ|tr=Amerikan Cẋanaqetta Štataš}}
 * Chinese:
 *: Cantonese: {{tø|yue|美利堅合眾國|tr=mei5lei6gin1hap6zung3gwok3|sc=Hani|xs=Cantonese}}, {{tø|yue|美國|tr=mei5gwok3|sc=Hani|xs=Cantonese}}, {{t-|cmn|美|tr=mei5|sc=Hani|xs=Cantonese}} (''abbreviation'')
-*: Mandarin: {{t|cmn|美利堅合眾國|sc=Hani}}, {{t-|cmn|美利坚合众国|tr=[[Měilìjiān Hézhòngguó]]|sc=Hani}}, {{t-|cmn|美國|sc=Hani}}, {{t-|cmn|美国|tr=[[Měiguó]]|sc=Hani}}, {{t-|cmn|美|tr=[[Měi|Měi-]]|sc=Hani}} (''abbreviation'')
+*: Mandarin: {{t|cmn|美利堅合眾國|sc=Hani}}, {{t-|cmn|美利坚合众国|tr=[[Měilìjiān Hézhòngguó]]|sc=Hani}}, {{t-|cmn|美國|sc=Hani}}, {{t-|cmn|美国|tr=[[Měiguó]]|sc=Hani}}, {{t-|cmn|美|tr=[[Měi]]-|sc=Hani}} {{qualifier|abbreviation}}
 *: [[Min Nan]]: {{tø|nan|米國|sc=Hans}}, {{tø|nan|米国|tr=[[Bí-kok]]|sc=Hans}}
 * Croatian: {{t+|hr|Sjedinjene Američke Države|f|p}}
 * Czech: {{t-|cs|Spojené státy americké|m|p}}, {{t-|cs|Spojené státy|m|p}}
