--- a/en/垔/垔.13080.wikitext
+++ b/en/垔/垔.13080.wikitext
@@ -33,6 +33,15 @@
 
 ----
 
+==Korean==
+
+===Hanja===
+{{ko-hanja|hangeul=인|eumhun=|rv=in|mr=in|y=in}}
+
+# {{defn|lang=ko|sort=土06}}
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
