--- a/en/坒/坒.13013.wikitext
+++ b/en/坒/坒.13013.wikitext
@@ -33,6 +33,15 @@
 
 ----
 
+==Korean==
+
+===Hanja===
+{{ko-hanja|hangeul=비|rv=bi|mr=pi}}
+
+# {{defn|lang=ko|sort=土04}}
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
