--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -136,6 +136,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 *: Mandarin: {{t|zh|數|sc=Hani}}, {{t|zh|数|tr=shǔ|sc=Hani}}, {{t|zh|計數|sc=Hani}}, {{t|zh|计数|tr=jìshù|sc=Hani}}, {{t|zh|計算|sc=Hani}}, {{t|zh|计算|tr=jìsuàn|sc=Hani}}, {{t|zh|算|tr=suàn|sc=Hani}}, {{t|zh|點|sc=Hani}}, {{t|zh|点|tr=diǎn|sc=Hani}}
 * Classical Nahuatl: {{tø|nci|pōhua}}
 * Czech: {{t+|cs|počítat}}
+* Dalmatian: {{t|dlm|embruar}}
 * Danish: {{t-|da|tælle}}
 * Dutch: {{t+|nl|tellen}}
 * Esperanto: [[konti]]
