t+osx:[[kuman]] ([[WT:EDIT|Assisted]]) <come#16680402>

--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -122,6 +122,7 @@ Examples exist in plays by Chicagoan {{w|David Mamet}}, such as ''{{w|American B
 * Mongolian: {{t|mn|ирэх|tr=irekh|sc=Cyrl|xs=Mongolian}}
 * Norwegian: {{t|no|komme}}
 * Old English: {{t-|ang|cuman|xs=Old English}}
+* Old Saxon: {{tø|osx|kuman}}
 * Pashto: {{ps-Arab|[[راتلل]]}}
 * Persian: {{t+|fa|آمدن|tr=âmadan|xs=Persian}}
 * Polish: {{t+|pl|przychodzić}}
