--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -3,7 +3,7 @@
 {{slim-wikipedia}}
 
 ===Etymology===
-{{etyl|enm}} {{term|comen|lang=enm}}, from {{etyl|ang}} {{term|cuman|lang=ang}}, from {{proto|Germanic|kwemanan}} (compare West Frisian {{term|komme|lang=fy}}, Dutch {{term|komen|lang=nl}}, German {{term|kommen|lang=de}}), from {{proto|Indo-European|gʷem-/gʷem-ye-}} (compare Latin {{term|venio|veniō|lang=la}}, Tocharian [[w:Tocharian A|A]] {{term|kumnäs|lang=xto}}, [[w:Tocharian B|B]] {{term|känmask|lang=xtb}}, Lithuanian {{term|gimti|lang=lt}} 'to be born', Ancient Greek {{term|sc=polytonic|βαίνω|tr=bainō|lang=grc}}, ''báskein'' 'to walk, go', Avestan ''ǰamaiti'' 'to go', Sanskrit {{term|sc=Deva|गच्छति|tr=gácchati|lang=sa}}), Hittite ''wemiyezi'' 'he finds'.
+From {{etyl|enm}} {{term|comen|lang=enm}}, {{term|cumen|lang=enm}}, from {{etyl|ang}} {{term|coman|lang=ang}}, {{term|cuman||to come, go, happen|lang=ang}}, from {{proto|Germanic|kwemanan|to come|lang=en}}, from {{proto|Indo-European|gʷem-||gʷem-ye-|to come, go, be born|lang=en}}. Cognate with {{etyl|sco|-}} {{term|cum||to come|lang=sco}}, {{etyl|frs|-}} {{term|cuma||to come|lang=frs}}, {{etyl|fy|-}} {{term|komme||to come|lang=fy}}, {{etyl|nl|-}} {{term|komen||to come|lang=nl}}, {{etyl|de|-}} {{term|kommen||to come|lang=de}}, {{etyl|da|-}} {{term|komme||to come|lang=da}}, {{etyl|sv|-}} {{term|komma||to come|lang=sv}}, {{etyl|is|-}} {{term|koma||to come|lang=is}}, Latin {{term|venio|veniō|come, arrive|lang=la}}, Lithuanian {{term|gimti||to be born, come into the world, arrive|lang=lt}}, Avestan {{term|||tr=ǰamaiti|to go|lang=ae}}, Sanskrit {{term|sc=Deva|गच्छति||tr=gácchati|to go|lang=sa}}.
 
 ===Pronunciation===
 * {{enPR|kŭm}}, {{IPA|/kʌm/}}, {{X-SAMPA|/kVm/}}
