/* Proper noun */ <France#16683062>

--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -18,7 +18,7 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 ===Proper noun===
 {{en-proper noun}}
 
-# A [[country]] in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République Française]]). Population: 62 million inhabitants.
+# A [[country]] in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République française]]). Population: 62 million inhabitants.
 
 ====Related terms====
 * [[Franco-]]
