t+uk:[[гром]] t+be:[[гром]] t+sh:[[гром]] t-balance t+sh:[[грмљавина]] t+sh:[[grom]] t+sh:[[grmljavina]] t+vi:[[sấm]] t+vi:[[sét]] ([[WT:EDIT|Assisted]]) <thunder#16696402>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -42,6 +42,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 {{trans-top|sound caused by  a lightning}}
 * Arabic: {{t+|ar|رعد|m|tr=ra3d}}
 * Armenian: {{t-|hy|որոտ|tr=orot}}
+* Belarusian: {{t|be|гром|m|tr=hrom|sc=Cyrl}}
 * [[Catalan]]: {{t|ca|tro|m}}
 * [[Chamicuro]]: {{tø|ccc|tswali}}
 * Chinese:
@@ -68,9 +69,9 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * [[Kott]]: {{tø|zko|ajak}}
 * [[Latgalian]]: {{tø|ltg|pārkiuņs}}
 * Latin: {{t-|la|tonus|m}}, {{t|la|tonitrus|m}}, {{t|la|tonitruum|n}}
-{{trans-mid}}
 * Latvian: {{t|lv|pērkons|m}}
 * Lithuanian: {{t|lt|griaustinis|xs=Lithuanian}}
+{{trans-mid}}
 * [[Macedonian]]: {{t+|mk|гром|m|tr=grom}}
 * [[Manx]]: {{t-|gv|taarnagh|xs=Manx}}
 * Navajo: {{tø|nv|iiʼniʼ}}
@@ -82,6 +83,9 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * Russian: {{t+|ru|гром|m|tr=grom}}
 * [[Scottish Gaelic]]: {{t-|gd|tàirneanach|m|xs=Scottish Gaelic}}
 * Serbian: {{t-|sr|grom}}, {{t-|sr|grmljavina}}
+* Serbo-Croatian:
+*: Cyrillic: {{t|sh|гром|m}}, {{t|sh|грмљавина|f}}
+*: Roman: {{t|sh|grom|m}}, {{t|sh|grmljavina|f}}
 * [[Sicilian]]: {{t+|scn|tronu|m|xs=Sicilian}}
 * Slovak: {{t-|sk|hrom}}
 * Slovene: [[grom]] {{m}}, [[grmenje]] {{n}}
@@ -94,6 +98,8 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * Thai: {{t|th|สายฟ้า|tr=săaifáa}}
 * Turkish: {{t|tr|gök gürültüsü}}
 * [[Tutelo]]: {{tø|tta|tuhangrua}}
+* Ukrainian: {{t|uk|гром|m|tr=hrom|sc=Cyrl}}
+* Vietnamese: {{t|vi|sấm}}, {{t|vi|sét}}
 * [[Volapük]]: {{t|vo|töt}}
 * Welsh: {{t|cy|daranau|xs=Welsh}}
 * [[West Frisian]]: {{t|fy|tonger|xs=West Frisian}}
