--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -43,7 +43,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * Arabic: {{t+|ar|رعد|m|tr=raʿd}}
 * Armenian: {{t-|hy|որոտ|tr=orot}}
 * Belarusian: {{t|be|гром|m|tr=hrom|sc=Cyrl}}
-* Bulgarian: {{t|bg|гром|m|tr=grom|sc=Cyrl}}
+* Bulgarian: {{t|bg|гръм|m|tr=grǎm|sc=Cyrl}}
 * [[Catalan]]: {{t|ca|tro|m}}
 * [[Chamicuro]]: {{tø|ccc|tswali}}
 * Chinese:
