t+lo:[[ຟ້າຮ້ອງ]] ([[WT:EDIT|Assisted]]) <thunder#16696502>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -68,6 +68,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * Japanese: {{t+|ja|雷|tr=[[かみなり]], kaminari|sc=Jpan}}
 * Korean: {{t|ko|우레|tr=ure|sc=Kore}}
 * [[Kott]]: {{tø|zko|ajak}}
+* Lao: {{t|lo|ຟ້າຮ້ອງ|tr=fā hǭng|sc=Laoo}}
 * [[Latgalian]]: {{tø|ltg|pārkiuņs}}
 * Latin: {{t-|la|tonus|m}}, {{t|la|tonitrus|m}}, {{t|la|tonitruum|n}}
 * Latvian: {{t|lv|pērkons|m}}
