t+km:[[{{trreq}}]] t-balance t+id:[[guntur]] t+id:[[guruh]] t+ms:[[guruh]] t+ms:[[guntur]] ([[WT:EDIT|Assisted]]) <thunder#16696536>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -63,9 +63,11 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * Hindi: {{t|hi|गड़गड़ाहट|f|tr=gaṛgaṛāhaṭ|sc=Deva}}
 * Hungarian: {{t+|hu|mennydörgés}}, {{t-|hu|égzengés}}
 * Icelandic: {{t+|is|þruma}}
+* Indonesian: {{t|id|guntur}}, {{t|id|guruh}}
 * Irish: {{t|ga|toirneach}}
 * Italian: {{t-|it|tuono|m}}
 * Japanese: {{t+|ja|雷|tr=[[かみなり]], kaminari|sc=Jpan}}
+* {{trreq|Khmer}}
 * Korean: {{t|ko|우레|tr=ure|sc=Kore}}
 * [[Kott]]: {{tø|zko|ajak}}
 * Lao: {{t|lo|ຟ້າຮ້ອງ|tr=fā hǭng|sc=Laoo}}
@@ -75,6 +77,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 {{trans-mid}}
 * Lithuanian: {{t|lt|griaustinis|xs=Lithuanian}}
 * [[Macedonian]]: {{t+|mk|гром|m|tr=grom}}
+* Malay: {{t|ms|guruh}}, {{t|ms|guntur}}
 * [[Manx]]: {{t-|gv|taarnagh|xs=Manx}}
 * Navajo: {{tø|nv|iiʼniʼ}}
 * [[Ngarrindjeri]]: {{tø|nay|munti}}
