t+bn:[[বজ্রধ্বনি]] ([[WT:EDIT|Assisted]]) <thunder#16696560>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -43,6 +43,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * Arabic: {{t+|ar|رعد|m|tr=raʿd}}
 * Armenian: {{t-|hy|որոտ|tr=orot}}
 * Belarusian: {{t|be|гром|m|tr=hrom|sc=Cyrl}}
+* Bengali: {{t|bn|বজ্রধ্বনি|tr=bôjrôdhbôni|sc=Beng}}
 * Bulgarian: {{t|bg|гръм|m|tr=grǎm|sc=Cyrl}}
 * [[Catalan]]: {{t|ca|tro|m}}
 * [[Chamicuro]]: {{tø|ccc|tswali}}
