t+km:[[ផ្គរ]] ([[WT:EDIT|Assisted]]) <thunder#16696895>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -68,7 +68,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * Irish: {{t|ga|toirneach}}
 * Italian: {{t-|it|tuono|m}}
 * Japanese: {{t+|ja|雷|tr=[[かみなり]], kaminari|sc=Jpan}}
-* {{trreq|Khmer}}
+* Khmer: {{t|km|ផ្គរ|tr=pkɔɔ|sc=Khmr}}
 * Korean: {{t|ko|우레|tr=ure|sc=Kore}}
 * [[Kott]]: {{tø|zko|ajak}}
 * Lao: {{t|lo|ຟ້າຮ້ອງ|tr=fā hǭng|sc=Laoo}}
