t+te:[[swargamu]] ([[WT:EDIT|Assisted]]) <zenith#16698900>

--- a/en/z/zenith.7223.wikitext
+++ b/en/z/zenith.7223.wikitext
@@ -91,6 +91,7 @@ From {{etyl|enm|en}} {{term|senith|lang=enm}}, from {{term|cinit|lang=enm}}, fro
 * Russian: [[зенит]] {{m}}, [[расцвет]] {{m}}, [[высшый|высшая]] [[точка]] {{f}}
 * Scottish Gaelic: {{t-|gd|bàrr|m|xs=Scottish Gaelic}}
 * Spanish: {{t-|es|apogeo|m}}, {{t+|es|cenit|m}}
+* Telugu: {{t|te|swargamu|tr=స్వర్గము|sc=Telu}}
 {{trans-bottom}}
 
 {{checktrans-top}}
