--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -25,6 +25,8 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 #*: That's the premise of the overload principle, and it must be applied, even to ab training, if you're going to develop a '''cut''', ripped midsection.
 # {{informal}} [[circumcised|Circumcised]].
 # {{Australia|slang}} Emotionally [[hurt]].
+# Eliminated from consideration during a recruitment drive.
+# Removed from a team roster.
 
 ====Derived terms====
 {{der-top|Terms derived from the adjective "cut"}}
