--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -10,6 +10,7 @@ From {{etyl|enm}} {{term|cutten|cutten, kytten|to cut|lang=enm}}, (compare {{ety
 * {{rhymes|ʌt}}
 
 ===Adjective===
+{{rfc}}
 {{en-adj}}
 
 # {{context|participial adjective}} Having been '''cut'''.
