t+ia:[[costar]] t-balance ([[WT:EDIT|Assisted]]) <cost#16710529>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -175,6 +175,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 * German: {{t+|de|kosten}}
 * Greek: [[κοστίζω]] [ko̞ˈstizo̞] (means also "to cause damage or distress"), [[στοιχίζω]] [stiˈçizo̞] (means also "to inflict" and "to align"), [[τιμώμαι]] [tiˈmo̞me̞], [[κάνω]] [ˈkano̞] [colloquial (has a huge number of meanings, one of them is "to cost")]
 * Indonesian: [[habis|menghabiskan]] biaya
+* Interlingua: {{t|ia|costar}}
 {{trans-mid}}
 * Italian: {{t+|it|costare}}
 * Japanese: {{t|ja|費やす|tr=[[ついやす]], tsuiyasu}}, {{t-|ja|掛かる|tr=kakaru}}
