--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -2,10 +2,10 @@
 ==English==
 
 ===Etymology===
-Recorded since 1416, from {{etyl|fro}} {{term|briche|lang=fro}}, probably from a {{etyl|gem}} source. Akin to {{etyl|dum|-}} {{term|bricke||a tile|lang=dum}}, literally "a broken piece". Cognate with the verb {{term|break|lang=en}}.
+From {{etyl|frm}} {{term|brique|lang=fr}}, probably from a {{etyl|gem}} source. Compare {{etyl|dum|-}} {{term|bricke||broken piece; tile|lang=dum}}. Cognate with the verb {{term|break|lang=en}}.
 
 ===Pronunciation===
-* {{enPR|brĭk}}, {{IPA|/brɪk/}}, {{X-SAMPA|/brIk/}}
+*{{a|UK|US}} {{enPR|brĭk}}, {{IPA|/bɹɪk/}}, {{X-SAMPA|/brIk/}}
 * {{audio|en-us-brick.ogg|Audio (US)}}
 * {{rhymes|ɪk}}
 
@@ -18,10 +18,10 @@ Recorded since 1416, from {{etyl|fro}} {{term|briche|lang=fro}}, probably from a
 #: ''This house is made of '''brick'''''.
 # {{countable}} Something shaped like a brick.
 #: ''a plastic explosive '''brick'''''
-# {{informal}} A [[helpful]] and [[reliable]] person
+# {{dated}} A [[helpful]] and [[reliable]] person.
 #: ''Thanks for helping me wash the car. You're a '''brick'''.''
 #* {{quote-book|year=1863|author=Elizabeth Caroline Grey|title=Good Society; Or, Contrasts of Character|url=http://books.google.com/books?id=JB6BWYCaQS8C&pg=PA72&dq=%22you%27re+a+brick%22&as_brr=3|page=72|passage=“It's easy to see you're a '''brick'''!” replied Lady Augusta, and the laugh again became general.}}
-#* {{quote-book|year=1906|author=Edith Nesbit|title=[[w:The Railway Children|The Railway Children]]|url=http://books.google.com/books?id=tLVPkFHLEZMC&pg=PA168&dq=%22you%27re+a+brick%22&as_brr=3&sig=bMkcYZ4ym_R-anlb_W206onJOf4|page=168|passage=‘Somebody had to stay with you,’ said Bobbie.<br>‘Tell you what, Bobbie,’ said Jim, ‘you’re a '''brick'''. Shake.’}}
+#* {{quote-book|year=1906|author={{w|Edith Nesbit}}|title=[[w:The Railway Children|The Railway Children]]|url=http://books.google.com/books?id=tLVPkFHLEZMC&pg=PA168&dq=%22you%27re+a+brick%22&as_brr=3&sig=bMkcYZ4ym_R-anlb_W206onJOf4|page=168|passage=‘Somebody had to stay with you,’ said Bobbie.<br>‘Tell you what, Bobbie,’ said Jim, ‘you’re a '''brick'''. Shake.’}}
 #* {{quote-book|year=1960|author=W.W. Jacobs|title=Cargoes|url=http://books.google.com/books?id=o2tFTib3eGQC&pg=PA45&dq=%22you%27re+a+brick%22+date:1940-1990&lr=&as_brr=3&sig=GQAlsIu4mx0WPYYdARw7Wxnbg9k|isbn=0828314306|page=45|passage=“Well, I’ll do what I can for you,” said the seaman, …“If you were only shorter, I'd lend you some clothes.”<br>“You're a '''brick''',” said the soldier gratefully.}}
 # {{basketball|slang}} A [[shot]] which misses, particularly one which bounces directly out of the basket because of a too-flat trajectory, as if the ball were a heavier object.
 #: ''We can't win if we keep throwing up '''bricks''' from three-point land.''
