t+bal:[[دامن]] ([[WT:EDIT|Assisted]]) <skirt#16716315>

--- a/en/s/skirt.7203.wikitext
+++ b/en/s/skirt.7203.wikitext
@@ -43,6 +43,7 @@ From {{etyl|non|en}} {{term|skyrta|lang=non}}, from {{proto|Germanic|skurtijōn|
 ====Translations====
 {{trans-top|clothing}}
 * Arabic: {{t|ar|تنورة|f|tr=tannuura|sc=Arab}}
+* Baluchi: {{tø|bal|دامن|tr=dáman}}
 * Belarusian: {{t|be|спадніца|f|tr=spadníca|sc=Cyrl}}
 * Bosnian: {{t-|bs|suknja|f}}
 * Bulgarian: {{t+|bg|пола|f|tr=polá|}}
