t+rap:[[rua]] ([[WT:EDIT|Assisted]]) <vomit#16719016>

--- a/en/v/vomit.8434.wikitext
+++ b/en/v/vomit.8434.wikitext
@@ -57,6 +57,7 @@ From {{etyl|enm}} {{term|vomiten|lang=enm}}, from {{etyl|la}} {{term|vomitare|vo
 * Old Irish: {{tø|sga|sceid|xs=Old Irish}}
 * Polish: {{t+|pl|wymiotować}}
 * Portuguese: {{t+|pt|vomitar}}, {{t|pt|regurgitar}}
+* Rapa Nui: {{tø|rap|rua}}
 * Romanian: {{t-|ro|vomita}}, {{t+|ro|borî}},  {{t-|ro|vărsa}}
 * Romansch: {{t-|rm|vomitar|xs=Romansch}}
 * Russian: {{t+|ru|блевать}}, {{t+|ru|рвать}}
