--- a/en/f/France.2105.wikitext
+++ b/en/f/France.2105.wikitext
@@ -19,6 +19,15 @@ From {{etyl|fr}} {{term|France|lang=fr}}, {{etyl|fro}} {{term|France|lang=fro}},
 {{en-proper noun}}
 
 # A [[country]] in Western Europe having borders with [[Belgium]], [[Luxembourg]], [[Germany]], [[Switzerland]], [[Italy]], [[Monaco]], [[Andorra]] and [[Spain]]. Member state of the [[European Union]]. Official name: [[French Republic]] ([[République française]]). Population: 62 million inhabitants.
+#*{{quote-news
+|year=2012
+|date=April 23
+|author=Angelique Chrisafis 
+|title=François Hollande on top but far right scores record result in French election
+|work=the Guardian
+|url=http://www.guardian.co.uk/world/2012/apr/23/francois-hollande-french-election
+|page=
+|passage=Hollande told cheering supporters in his rural fiefdom of Corrèze in south-west '''France''' that he was best-placed to lead '''France''' towards change, saying the vote marked a "rejection" of Sarkozy and a "sanction" against his five years in office.}}
 
 ====Related terms====
 * [[Franco-]]
