--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -155,8 +155,8 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Ido: {{t|io|kontar|xs=Ido}}
 * Indonesian: {{t|id|menghitung}}
 * Italian: {{t+|it|contare}}
-* Japanese: {{t|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
 {{trans-mid}}
+* Japanese: {{t|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
 * Khmer: {{t|km|រាប់|tr=roap|sc=Khmr}}
 * Korean: {{t|ko|세다|tr=seda|sc=Kore}}
 * Kurdish: {{t|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
@@ -174,6 +174,7 @@ From {{etyl|enm}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|conter|
 * Persian: {{t-|fa|شمردن|tr=šomordan|xs=Persian}}
 * Polish: {{t+|pl|liczyć}}
 * Portuguese: {{t+|pt|contar}}
+* Rapa Nui: {{tø|rap|tataku}}
 * Romanian: {{t-|ro|număra}}
 * Romansch: {{t-|rm|enumerar|xs=Romansch}}, {{t|rm|dumbrar|xs=Romansch}}
 * Russian: {{t|ru|считать|tr=sčitát’|sc=Cyrl}} {{impf}}, {{t|ru|посчитать|tr=posčitát’|sc=Cyrl}} {{pf.}}, {{t|ru|счесть|tr=sčest’|sc=Cyrl}} {{pf.}}, {{t|ru|сосчитать|tr=sosčitát’|sc=Cyrl}} {{pf.}}
