--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -88,6 +88,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * [[Romagnolo]]: [[tràun]] {{m}}
 * Romanian: {{t+|ro|tunet}}
 * Russian: {{t+|ru|гром|m|tr=grom}}
+* Sanskrit: {{t|sa|गर्जन|tr=garjana|sc=Deva}}
 * [[Scottish Gaelic]]: {{t-|gd|tàirneanach|m|xs=Scottish Gaelic}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|гром|m}}, {{t|sh|грмљавина|f}}
