t+ms:[[kot]] ([[WT:EDIT|Assisted]]) <coat#16749623>

--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -51,6 +51,7 @@ From {{etyl|enm}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{etyl|
 * Japanese: {{t-|ja|コート|tr=kōto}}, {{t|ja|外套|tr=がいとう, gaitō}}
 * Korean: {{t|ko|코트|tr=koteu}}
 * Luhya: {{tø|luy|kumuchosi}}
+* Malay: {{t|ms|kot}}
 * Navajo: {{tø|nv|éétsoh}}
 * Norwegian: {{t|no|frakk|m}}
 * Persian: {{t|fa|پالتو|tr=pâlto|sc=fa-Arab}}
