t+hy:[[քարտուղարուհի]] ([[WT:EDIT|Assisted]]) <secretary#16757120>

--- a/en/s/secretary.7224.wikitext
+++ b/en/s/secretary.7224.wikitext
@@ -33,7 +33,7 @@ From {{etyl|ML.}} {{term|lang=la|secretarius||one entrusted with secrets}}, from
 ====Translations====
 {{trans-top|person keeping records and handling clerical work}}
 * Arabic: {{t|ar|سكرتير|m|tr=sikritér}}, {{t|ar|سكرتيرة|f|tr=sikritéra}}
-* Armenian: {{t|hy|քարտուղար|tr=kʿartułar|sc=Armn}}
+* Armenian: {{t|hy|քարտուղար|tr=kʿartułar|sc=Armn}}, {{qualifier|female}} {{t|hy|քարտուղարուհի|tr=kʿartułaruhi|sc=Armn}}
 * Basque: {{t|eu|idazkari|xs=Basque}}
 * Bulgarian: {{t+|bg|секретар|m|tr=sekretar}}, {{t|bg|секретарка|f|tr=sekretarka}}
 * Chechen: [[йозанча]]
