--- a/en/s/substance.7215.wikitext
+++ b/en/s/substance.7215.wikitext
@@ -51,7 +51,7 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * Polish: {{t+|pl|substancja|f}}
 * Portuguese: {{t+|pt|substância|f}}
 * Romanian: {{t|ro|substanță|f}}
-* Russian: {{t+|ru|вещество|n|tr=veščestvó}}
+* Russian: {{t+|ru|вещество|n|tr=veščestvó}}, {{t|ru|субстанция|f|tr=substáncija|sc=Cyrl}}, {{t|ru|материя|f|tr=matérija|sc=Cyrl}}
 * Spanish: {{t+|es|sustancia|f}}
 * Swedish: {{t+|sv|ämne|n}}, {{t+|sv|substans|c}}
 * [[Telugu]]: {{t|te|పదార్థము|tr=padaarthamu}}
@@ -69,13 +69,14 @@ From {{etyl|fro}} {{term|substance|lang=fro}}, from {{etyl|la}} {{term|substanti
 * Greek: {{t|el|ουσία|f|tr=ousía}}
 * Hebrew: {{t|he|תוכן|m|tr=tókhen}}
 * Hungarian: {{t+|hu|lényeg}}
-{{trans-mid}}
 * Japanese: {{t|ja|骨子|tr=kosshi}}
+{{trans-mid}}
 * Latin: {{t-|la|substantia|f}}
 * Norwegian: {{t-|no|substans|m}}
 * Polish: {{t+|pl|istota|f}}
 * Portuguese: {{t+|pt|substância|f}}
 * Romanian: {{t|ro|substanță|f}}
+* Russian: {{t|ru|сущность|f|tr=súščnostʹ|sc=Cyrl}}
 * [[Scottish Gaelic]]: {{t|gd|susbaint|f}}
 * Spanish: {{t+|es|sustancia|f}}
 * Swedish: {{t+|sv|substans|c}}
