/* Translations */ el <thunder#16780570>

--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -58,7 +58,7 @@ From {{etyl|ang}} {{term|þunor}}, from {{proto|Germanic|þunraz}}, from *þen, 
 * French: {{t+|fr|tonnerre|m}}
 * Georgian: {{t|ka|ქუხილი|tr=kʻuxili|sc=Geor|xs=Georgian}}, {{t|ka|ჭექა-ქუხილი|tr=ček'a-k'uxili|sc=Geor}}
 * German: {{t+|de|Donner|m}}
-* Greek: {{t+|el|κεραυνός|m|tr=keravnós}}
+* Greek: {{t+|el|βροντή|f|tr=vrondí}}
 * Haitian Creole: {{tø|ht|loray}}
 * Hebrew: {{t|he|רעם|tr=ra'am|sc=Hebr}}
 * Hindi: {{t|hi|गरज|f|tr=garaj|sc=Deva}}, {{t|hi|गड़गड़ाहट|f|tr=gaṛgaṛāhaṭ|sc=Deva}}
