/* Phrase */ <et cetera#16780978>

--- a/en/e/et cetera.7211.wikitext
+++ b/en/e/et cetera.7211.wikitext
@@ -22,7 +22,7 @@ From {{etyl|la}} {{term|et cetera|et cētera|lang=la|and the rest" or "and so fo
 {{head|en|phrase|head=[[et]] [[cetera]]}}
 
 # And the rest, and the others; to complete a list.
-#: ''The grocery sells cucumbers, lettuce, radishes, '''etc'''.''
+#: ''The grocery's sells cucumbers, lettuce, radishes, '''etc'''.''
 # And so forth; to indicate missing information, often well known.
 #: ''The plagiarism was painfully obvious: "It was the best of times, it was the worst of times," '''etc.'''''
 
