--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -195,7 +195,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Hungarian: {{t+|hu|hid|alt=híd}}
 {{trans-mid}}
 * Italian: {{t+|it|ponte|m}}
-* Japanese: {{t|ja|冠橋義歯|tr=(かんきょうぎし, kankyo gishi)|sc=Jpan}}
+* Japanese: {{t|ja|冠橋義歯|tr=かんきょうぎし, kankyo gishi|sc=Jpan}}
 * Polish: {{t+|pl|most|m}}, {{t+|pl|mostek|m}}
 * Russian: {{t+|ru|мост|m|tr=most}}
 * Serbo-Croatian:
@@ -221,7 +221,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Hungarian: {{t+|hu|hid|alt=híd}}
 * Irish: {{t|ga|droichead|m}}
 {{trans-mid}}
-* Japanese: {{t|ja|船橋|sc=Jpan}}, {{t|ja|船橋|tr=(せんきょう, senkyo)|sc=Jpan}}
+* Japanese: {{t|ja|船橋|tr=せんきょう, senkyo|sc=Jpan}}
 * Polish: {{t|pl|mostek kapitański|m}}
 * Russian: {{t|ru|капитанский мостик|m|tr=kapitánskij móstik}}
 * Serbian:
