--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -120,7 +120,7 @@ From {{etyl|enm}} {{term|brigge|lang=enm}}, from {{etyl|ang|en}} {{term|brycg|la
 * Luxembourgish: {{t|lb|Bréck|f}}
 * Macedonian: {{t|mk|мост|m|tr=most|sc=Cyrl}}
 * Malay: {{t|ms|jambatan}}
-* Malayalam: [[പാലം]] (paalam)
+* Malayalam: [[പാലം]] (paalam), {{t|ml|പാലം|tr=pālam|sc=Mlym}}
 * Maltese: {{t-|mt|pont|m|xs=Maltese}}
 * Maori: {{t|mi|piriti}}, {{t|mi|arawhata}}
 * Mongolian: {{t|mn|гүүр тавих|tr=güür tavih|sc=Cyrl}}, {{t|mn|гүүр|tr=güür|sc=Cyrl}}
